<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable name="viewmodel"
        type="com.example.client.ui.main.MainViewModel"/>
</data>

<RelativeLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:text="@{viewmodel.user.email}"
        tools:text="probelalkhan@gmail.com"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_centerInParent="true"
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="@{(v) -> viewmodel.logout(v)}"
        android:text="@string/logout"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/projectList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_list" />

    <Button
        android:id="@+id/createProject"
        android:text="@string/CreateProject"
        android:layout_below="@+id/projectList"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <Button
        android:id="@+id/taskList"
        android:text="Task List"
        android:layout_below="@+id/createProject"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

</RelativeLayout>

</layout>