<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createProject.CreateProject">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="99dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/newProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/newProjectName"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNewProjectName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/newProjectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newProjectName"
        android:layout_marginStart="10dp"
        android:text="@string/newProjectDescription"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNewProjectDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editNewProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/newProjectName"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/editNewProjectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/newProjectDescription"
        app:layout_constraintTop_toBottomOf="@+id/editNewProjectName"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/buttonAssignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/buttonAssignment"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFinalProject"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonFinalProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:text="@string/finalProject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonAssignment"
        app:layout_constraintTop_toBottomOf="@+id/editNewProjectDescription" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAssignment" />


</androidx.constraintlayout.widget.ConstraintLayout>